--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
         <li>Link Three</li>
        </ul>
     </div>
-
-
+    <div class="hero">
+        <h1>This Website is awesome</h1>
+        <p>This website has some subtext that goes here under the main title. its a smaller font and the color is lower contrast</p>
+        <button>Sign up</button>
+        <img  alt="this is a placeholder for an image">
+    </div>
+    
     
 </body>
 </html>
