added cards section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
         <button>Sign up</button>
         <img  alt="this is a placeholder for an image">
     </div>
+    <div class="sectionTwo">
+        <div class="cards">
+            <div class="card">
+                subtext under an image
+            </div>
+        </div>
+    </div>
     
     
 </body>
