changed sectionTwo class to cardWithText.
added third section with class named quote
added content inside the quote section

--- a/index.html
+++ b/index.html
@@ -20,12 +20,16 @@
         <button>Sign up</button>
         <img  alt="this is a placeholder for an image">
     </div>
-    <div class="sectionTwo">
+    <div class="cardsWithText">
         <div class="cards">
             <div class="card">
                 subtext under an image
             </div>
         </div>
+    </div>
+    <div class="quote">
+        <p>This is an inspiring quote</p>
+        <p>quote by</p>
     </div>
     
     
