added call to action container with h3 type, p element and button
added footer container

--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
         <p>This is an inspiring quote</p>
         <p>quote by</p>
     </div>
+    <div class="callToAction">
+        <div class="container">
+            <h3>Call to action!</h3>
+            <p>sign up for our product</p>
+            <button>Sign up</button>
+        </div>
+    </div>
+    <div class="footer">
+        <p>Copyright The Odin Project 2021</p>
+    </div>
     
     
 </body>
