changed header logo in header to new radio
changed document title to new radio

linked stylesheet

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>New Radio</title>
+    <link rel="stylsheet" href="style.css">
 </head>
 <body>
     <div class="header">
-       <h2>Header Logo</h2>
+       <h2>New Radio</h2>
        <ul>
         <li>Link One</li>
         <li>Link two</li>
@@ -41,7 +42,5 @@
     <div class="footer">
         <p>Copyright The Odin Project 2021</p>
     </div>
-    
-    
 </body>
 </html>
