--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <h2>This Website is awesome</h2>
         <p>This website has some subtext that goes here under the main title. its a smaller font and the color is lower contrast</p>
         <button>Sign up</button>
+        <div class="placeholder"></div>
         <img  alt="this is a placeholder for an image">
     </div>
     <div class="cardsWithText">
