changed section name from cardWithText to information

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="placeholder"></div>
         <img  alt="this is a placeholder for an image">
     </div>
-    <div class="cardsWithText">
+    <div class="information">
         <div class="cards">
             <div class="card">
                 subtext under an image
