--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p>This is an inspiring quote</p>
         <p>quote by</p>
     </div>
-    <div class="callToAction">
+    <div class="action">
         <div class="container">
             <h3>Call to action!</h3>
             <p>sign up for our product</p>
