added a div container with class content inside of hero container surrounding everything but place holder image
the idea is to then add flex direction column to
that specific div

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
        </ul>
     </div>
     <div class="hero">
+        <div class="content">
         <h2>This Website is awesome</h2>
         <p>This website has some subtext that goes here under the main title. its a smaller font and the color is lower contrast</p>
         <button>Sign up</button>
+       </div>
         <div class="placeholder"></div>
         <img  alt="this is a placeholder for an image">
     </div>
