--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <p>This website has some subtext that goes here under the main title. its a smaller font and the color is lower contrast</p>
         <button>Sign up</button>
        </div>
-        <div class="placeholder"></div>
+        <div class="placeholder">
+            <div></div>
+        </div>
     </div>
     <div class="information">
         <div class="cards">
