adjusted font sizeing to main text in hero and logo in header

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="hero">
         <div class="content">
-        <p class="main">This Website is awesome<p>
+        <p class="main">This website is awesome<p>
         <p>This website has some subtext that goes here under the main title. its a smaller font and the color is lower contrast</p>
         <button>Sign up</button>
        </div>
