added div inside of card div so i can make placeholder boxes

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <div class="information">
         <div class="cards">
             <div class="card">
+                <div></div>
                 subtext under an image
             </div>
         </div>
