--- a/index.html
+++ b/index.html
@@ -25,12 +25,11 @@
             <div></div>
         </div>
     </div>
-    <div class="information">
+    <div class="information">Some random information.
         <div class="cards">
             <div class="card">
-                <div></div>
-                subtext under an image
             </div>
+            subtext under an image
         </div>
     </div>
     <div class="quote">
