--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
             <div class="card">
             </div>
             subtext under an image
+            <div class="card">
+            </div>
+            subtext under an image
+            <div class="card">
+            </div>
+            subtext under an image
+            <div class="card">
+            </div>
+            subtext under an image
         </div>
     </div>
     <div class="quote">
