added div with class box inside of "card" div to act as the "blue box" and moved subtext inside the same card div with its own div named "text"
this way the subtext stays under the image when i activate display flex.

--- a/index.html
+++ b/index.html
@@ -28,17 +28,21 @@
     <div class="information">Some random information.
         <div class="cards">
             <div class="card">
+                <div class="box"></div>
+                <div class="text">subtext under an image</div>
             </div>
-            subtext under an image
             <div class="card">
+                <div class="box"></div>
+                <div class="text">subtext under an image</div>
             </div>
-            subtext under an image
             <div class="card">
+                <div class="box"></div>
+                <div class="text">subtext under an image</div>
             </div>
-            subtext under an image
             <div class="card">
+                <div class="box"></div>
+                <div class="text">subtext under an image</div>
             </div>
-            subtext under an image
         </div>
     </div>
     <div class="quote">
