--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
         <div class="cards">
             <div class="card">
                 <div class="box"></div>
-                <div class="text">subtext under an image</div>
+                <div class="text">this is some subtext under an illustration or image</div>
             </div>
             <div class="card">
                 <div class="box"></div>
-                <div class="text">subtext under an image</div>
+                <div class="text">this is some subtext under an illustration or image</div>
             </div>
             <div class="card">
                 <div class="box"></div>
-                <div class="text">subtext under an image</div>
+                <div class="text">this is some subtext under an illustration or image</div>
             </div>
             <div class="card">
                 <div class="box"></div>
-                <div class="text">subtext under an image</div>
+                <div class="text">this is some subtext under an illustration or image</div>
             </div>
         </div>
     </div>
