--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div></div>
         </div>
     </div>
-    <div class="information">Some random information.
+    <div class="information">Some random information.</div>
         <div class="cards">
             <div class="card">
                 <div class="box"></div>
@@ -44,7 +44,6 @@
                 <div class="text">this is some subtext under an illustration or image</div>
             </div>
         </div>
-    </div>
     <div class="quote">
         <p>This is an inspiring quote</p>
         <p>quote by</p>
