--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             </div>
         </div>
     <div class="quote">
-        <p>This is an inspiring quote</p>
-        <p>quote by</p>
+        <p>Everybody was asking me what would I do if I didnt win? I guess we'll never know!</p>
+        <p>- Kanye West</p>
     </div>
     <div class="action">
         <div class="container">
