extended call to action text

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="action">
         <div class="container">
             <h3>Call to action!</h3>
-            <p>sign up for our product</p>
+            <p>sign up for our product by clicking that butto right over ther!</p>
             <button>Sign up</button>
         </div>
     </div>
