added font styling and padding to quote areas,
turned quote section into flex direction cloumn then aligned items canter

added class "quoteBy" to p elements for quote artist so i could position and style differently

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             </div>
         </div>
     <div class="quote">
-        <p>Everybody was asking me what would I do if I didnt win? I guess we'll never know!</p>
-        <p>- Kanye West</p>
+        <p>Everybody was asking me what I would do if I didnt win? I guess we'll never know!</p>
+        <p class="quoteBy">- Kanye West</p>
     </div>
     <div class="action">
         <div class="container">
