--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
         <div class="container">
             <h3>Call to action!</h3>
             <p>sign up for our product by clicking that butto right over ther!</p>
+            <div class="whiteBorderButton">
             <button>Sign up</button>
+            </div>
         </div>
     </div>
     <div class="footer">
