--- a/index.html
+++ b/index.html
@@ -50,10 +50,12 @@
     </div>
     <div class="action">
         <div class="container">
+            <div class="left-side">
             <h3>Call to action!</h3>
             <p>sign up for our product by clicking that butto right over ther!</p>
-            <div class="whiteBorderButton">
-            <button>Sign up</button>
+            </div>
+            <div class="right-side">
+            <button class="whiteBorderButton">Sign up</button>
             </div>
         </div>
     </div>
