--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
         <div class="container">
             <div class="left-side">
             <h3>Call to action!</h3>
+            <div>
             <p>sign up for our product by clicking that butto right over ther!</p>
+            </div>
             </div>
             <div class="right-side">
             <button class="whiteBorderButton">Sign up</button>
